Fixed CORS issue for Vercel frontend