@@ -32,7 +32,7 @@ import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 import org.springframework.web.filter.CorsFilter;
 
-import java.util.Arrays;
+import java.util.List;
 
 @Configuration
 public class CorsConfig {
@@ -43,23 +43,23 @@ public class CorsConfig {
         corsConfiguration.setAllowCredentials(true);
 
         // ✅ Allow both localhost (development) and Vercel frontend
-        corsConfiguration.setAllowedOrigins(Arrays.asList(
+        corsConfiguration.setAllowedOriginPatterns(List.of(
                 "http://localhost:3000",
-                "https://fitness-activity-bnwi-6onorl1um-eashamashuds-projects.vercel.app/"
+                "https://fitness-activity-bnwi-6onorl1um-eashamashuds-projects.vercel.app"
         ));
 
         // ✅ Explicitly allow important headers
-        corsConfiguration.setAllowedHeaders(Arrays.asList(
+        corsConfiguration.setAllowedHeaders(List.of(
                 "Origin", "Content-Type", "Accept", "Authorization"
         ));
 
         // ✅ Allow all common HTTP methods
-        corsConfiguration.setAllowedMethods(Arrays.asList(
+        corsConfiguration.setAllowedMethods(List.of(
                 "GET", "POST", "PUT", "DELETE", "OPTIONS"
         ));
 
         // ✅ Allow all exposed headers
-        corsConfiguration.setExposedHeaders(Arrays.asList(
+        corsConfiguration.setExposedHeaders(List.of(
                 "Authorization", "Content-Type"
         ));
 
